# kite-vpn

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: backend-image.yml  cd.yml  ci.yml  release.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
apps/backend/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  litestream-secret.example.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
apps/backend/migrations/: 001_init.sql  002_admin_invites_bridges.sql  003_audit_totp_versions_meshes.sql
apps/backend/src/: admin.rs  admin_routes.rs  audit.rs  auth.rs  backup.rs  bridges.rs  db.rs  error.rs  invites.rs  lib.rs  mailer.rs  main.rs  metrics.rs  nebula.rs  ratelimit.rs  sessions.rs  state.rs  totp.rs  updates.rs  webhooks.rs
apps/backend/templates/: env.template  kite-backend.service  nebula.yaml.template  nginx.conf.template
apps/backend/tests/: integration_test.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/: default_config.yaml
apps/desktop/src-tauri/scripts/: download-sidecar.sh
apps/desktop/src-tauri/src/: commands.rs  engine.rs  lib.rs  main.rs  native_menu_mac.rs  nebula_engine.rs  system_proxy.rs  tray.rs
apps/desktop/src-tauri/src/commands/: account.rs  account_bridges.rs  account_invites.rs  account_updates.rs  config.rs  engine.rs  mesh.rs  mihomo.rs  mod.rs  speed_test.rs  subscription.rs  system.rs
apps/lighthouse/: README.md  deploy.sh
apps/lighthouse/templates/: config.yaml.template  kite-lighthouse.service
apps/mobile/: package.json  setup-android.sh
apps/mobile/android-overlay/app/src/main/: AndroidManifest.xml
apps/mobile/android-overlay/app/src/main/kotlin/com/kitevpn/mobile/: KiteVpnService.kt
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: commands.rs  lib.rs  main.rs  vpn.rs
scripts/: sync-app-version.mjs
